ading in a snapshot of tmux to load on start

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,5 @@
-set -g default-terminal "screen-256color"
+# Needed for colors to be showing up correctly in vim
+set -g default-terminal "xterm"
+
+# Grap the snapshot on load
+source-file ~/.tmux.snapshot
