few small changes to themes, simplified .zshrc and more support in .vimrc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
-# Needed for colors to be showing up correctly in vim
+#Needed for colors to be showing up correctly in vim
 set -g default-terminal "xterm"
 
-# Grap the snapshot on load
+#Normal scrolling like you'd expect in your terminal
+set -g mouse on
+
+#Grap the snapshot on load
 source-file ~/.tmux.snapshot
