getting italics to work correctly in both iterm and in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 #Needed for colors to be showing up correctly in vim
-set -g default-terminal "xterm"
+set -g default-terminal "tmux-256color-italic"
+set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
 
 #Normal scrolling like you'd expect in your terminal
 set -g mouse on
