changing some small tmux settings

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -5,5 +5,14 @@ set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
 #Normal scrolling like you'd expect in your terminal
 set -g mouse on
 
+#Specific bindings
+unbind C-b
+set -g prefix C-a
+
+setw -g monitor-activity on
+set -g visual-activity on
+
+set-window-option -g window-status-current-bg blue 
+
 #Grap the snapshot on load
 source-file ~/.tmux.snapshot
