--- a/tilde/.tmux.conf
+++ b/tilde/.tmux.conf
@@ -1,6 +1,5 @@
 #Needed for colors to be showing up correctly in vim
-set -g default-terminal "tmux-256color-italic"
-set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
+set -g default-terminal "screen-256color"
 
 #Normal scrolling like you'd expect in your terminal
 set -g mouse on
