--- a/tilde/.tmux.conf
+++ b/tilde/.tmux.conf
@@ -1,5 +1,5 @@
 #Needed for colors to be showing up correctly in vim
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-termite"
 
 #Normal scrolling like you'd expect in your terminal
 set -g mouse on
@@ -14,4 +14,4 @@ set -g visual-activity on
 set-window-option -g window-status-current-bg blue 
 
 #Grap the snapshot on load
-source-file ~/.tmux.snapshot
+source-file ~/.flavor/tmux.snapshot
