adding in a new theme

--- a/tilde/flavor/plug.settings
+++ b/tilde/flavor/plug.settings
@@ -2,7 +2,7 @@ set ft=vim
 
 " lightline settings
 let g:lightline = {
-      \ 'colorscheme': 'one',
+      \ 'colorscheme': 'tender',
       \ }
 
 " tmuxline settings
