--- a/tilde/flavor/plug.settings
+++ b/tilde/flavor/plug.settings
@@ -24,7 +24,7 @@ let g:notes_conceal_url = 0
 
 " turn on Goyo specifcally for txt files
 au BufReadPost,BufNewFile *.md :Goyo 90%
-au BufReadPost,BufNewFile *.md set wrap linebreak nolist spell spelllang=en_us complete+=kspell
+au BufReadPost,BufNewFile *.md,COMMIT_EDITMSG set wrap linebreak nolist spell spelllang=en_us complete+=kspell
 
 " ale
 let g:ale_fixers = {
