--- a/tilde/flavor/plug.settings
+++ b/tilde/flavor/plug.settings
@@ -35,16 +35,12 @@ let g:ale_fixers = {
 
 " LanguageClient-neovim settings
 let g:LanguageClient_autoStart = 1
-if executable('javascript-typescript-stdio')
-  let g:LanguageClient_serverCommands = {
-    \ 'javascript': ['/usr/local/bin/javascript-typescript-stdio'],
-    \ 'javascript.jsx': ['/usr/local/bin/javascript-typescript-stdio'],
-    \ }
-  autocmd FileType javascript setlocal omnifunc=LanguageClient#complete
-else
-  echo "javascript-typescript-stdio not installed!\n"
-  :cq
-endif
+let g:LanguageClient_serverCommands = {
+      \ 'javascript': ['/usr/local/bin/javascript-typescript-stdio'],
+      \ 'javascript.jsx': ['/usr/local/bin/javascript-typescript-stdio'],
+      \ 'elm': ['/usr/local/bin/elm-oracle']
+      \ }
+autocmd FileType javascript, elm setlocal omnifunc=LanguageClient#complete
 nnoremap <F5> :call LanguageClient_contextMenu()<CR>
 nnoremap <silent> K :call LanguageClient#textDocument_hover()<CR>
 nnoremap <silent> gd :call LanguageClient#textDocument_typeDefinition()<CR>
