--- a/tilde/flavor/plug.settings
+++ b/tilde/flavor/plug.settings
@@ -33,17 +33,19 @@ let g:ale_fixers = {
   \ 'javascript': ['eslint', 'prettier'],
   \ }
 
-" LanguageClient-neovim settings
-let g:LanguageClient_autoStart = 1
-let g:LanguageClient_serverCommands = {
-      \ 'javascript': ['/home/ckipp/.npm-global/bin/javascript-typescript-stdio'],
-      \ 'javascript.jsx': ['/home/ckipp/.npm-global/bin/javascript-typescript-stdio']
-      \ }
-autocmd FileType [javascript, elm] setlocal omnifunc=LanguageClient#complete
-nnoremap <F5> :call LanguageClient_contextMenu()<CR>
-nnoremap <silent> K :call LanguageClient#textDocument_hover()<CR>
-nnoremap <silent> gd :call LanguageClient#textDocument_typeDefinition()<CR>
-nnoremap <silent> <F2> :call LanguageClient#textDocument_rename()<CR>
+let g:lsc_server_commands = {
+      \ 'javascript': '/home/ckipp/.npm-global/bin/javascripty-typescript-stdio',
+      \ 'javascript.jsx': '/home/ckipp/.npm-global/bin/javascript-typescript-stdio'}
+
+let g:lsc_auto_map = {
+      \ 'GoToDefinition': '<leader>gd',
+      \ 'FindReferences': '<leader>fr',
+      \ 'NextReference': '<leader>nr',
+      \ 'PreviousReference': '<leader>pr',
+      \ 'FindImplementations': '<leader>fi',
+      \ 'ShowHover': '<leader>h',
+      \ 'Completion': 'completefunc'
+      \}
 
 " deoplete
 let g:deoplete#enable_at_startup = 1
