--- a/tilde/flavor/plug.settings
+++ b/tilde/flavor/plug.settings
@@ -21,6 +21,7 @@ let g:notes_conceal_url = 0
 " turn on Goyo specifcally for txt files
 au BufReadPost,BufNewFile *.md :Goyo 90%
 au BufReadPost,BufNewFile *.md,COMMIT_EDITMSG set wrap linebreak nolist spell spelllang=en_us complete+=kspell
+au BufReadPost,BufNewFile *.html set spell spelllang=en_us
 
 " specifcally for vim-scala
 au BufRead,BufNewFile *.sbt set filetype=scala
