--- a/tilde/flavor/plug.settings
+++ b/tilde/flavor/plug.settings
@@ -29,6 +29,7 @@ au BufRead,BufNewFile *.sbt set filetype=scala
 " ale
 let g:ale_completion_enabled = 1
 let g:ale_lint_on_save = 1
+let g:ale_fix_on_save = 1
 let g:ale_linters = {
   \ 'javascript': ['standard']
   \ }
