update to base16 color theme and change up tmux settings

--- a/tilde/.tmux.conf
+++ b/tilde/.tmux.conf
@@ -13,6 +13,43 @@ set -g visual-activity on
 
 set-window-option -g window-status-current-bg blue 
 
-#Grap the snapshot on load
-# :TmuxlineSnapshot [file] used to create a new one
-source-file ~/.flavor/tmux.snapshot
+set -g status-justify "centre"
+set -g status "on"
+set -g status-attr "none"
+set -g status-left-length "100"
+set -g status-left-attr "none"
+set -g status-right-attr "none"
+set -g status-right-length "100"
+setw -g window-status-attr "none"
+
+# COLOUR (base16)
+# default statusbar colors
+set-option -g status-bg "#181818"
+set-option -g status-fg "#b8b8b8"
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-bg default
+set-window-option -g window-status-fg "#b8b8b8"
+
+# active window title colors
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-fg "#d8d8d8"
+
+# pane border
+set-option -g pane-border-fg "#282828"
+set-option -g pane-active-border-fg "#383838"
+
+# message text
+set-option -g message-bg "#282828"
+set-option -g message-fg "#d8d8d8"
+
+# pane number display
+set-option -g display-panes-active-colour "#a1b56c"
+set-option -g display-panes-colour "#f7ca88"
+
+# clock
+set-window-option -g clock-mode-colour "#a1b56c"
+
+# bell
+set-window-option -g window-status-bell-style fg="#282828",bg="#ab4642"
