--- a/tilde/flavor/plug.settings
+++ b/tilde/flavor/plug.settings
@@ -27,15 +27,25 @@ au BufReadPost,BufNewFile *.html set spell spelllang=en_us
 au BufRead,BufNewFile *.sbt set filetype=scala
 
 " ale
+let g:ale_sign_error = '❌'
+let g:ale_sign_warning = '⚠️'
 let g:ale_completion_enabled = 1
-let g:ale_lint_on_save = 1
 let g:ale_fix_on_save = 1
+
+if executable("./node_modules/.bin/standard")
+  let linter = "standard"
+elseif filereadable(expand("./.eslintrc"))
+  let linter = "eslint"
+else
+  let linter = "standard"
+endif
+
 let g:ale_linters = {
-  \ 'javascript': ['standard']
+  \ 'javascript': [linter]
   \ }
 let g:ale_fixers = {
   \ '*': ['trim_whitespace'],
-  \ 'javascript': ['standard']
+  \ 'javascript': [linter]
   \ }
 
 let g:lsc_server_commands = {
