update tmux conf and new snapshot

--- a/tilde/.tmux.conf
+++ b/tilde/.tmux.conf
@@ -11,13 +11,14 @@ set -g prefix C-a
 setw -g monitor-activity on
 set -g visual-activity on
 
-set-window-option -g window-status-current-bg blue 
+set-window-option -g window-status-current-bg blue
 
 set -g status-justify "centre"
 set -g status "on"
 set -g status-attr "none"
 set -g status-left-length "100"
 set -g status-left-attr "none"
+set -g status-right " %d/%m - %H:%M "
 set -g status-right-attr "none"
 set -g status-right-length "100"
 setw -g window-status-attr "none"
