add in specific setting for neovim to include messages for LSC stuff

--- a/tilde/flavor/plug.settings
+++ b/tilde/flavor/plug.settings
@@ -48,6 +48,12 @@ let g:ale_fixers = {
   \ 'javascript': [linter]
   \ }
 
+" LSC settings
+
+if has ('nvim')
+  set shortmess-=F
+endif
+
 let g:lsc_server_commands = {
       \ 'javascript': 'javascript-typescript-stdio',
       \ 'javascript.jsx': 'javascript-typescript-stdio',
