add in ability to open new tmux pane in the same directory

--- a/tilde/.tmux.conf
+++ b/tilde/.tmux.conf
@@ -11,6 +11,10 @@ set -g prefix C-a
 setw -g monitor-activity on
 set -g visual-activity on
 
+# Allos you to split into the same directory you were in when you split
+bind-key '%' split-window -h -c '#{pane_current_path}'
+bind-key '"' split-window -v -c '#{pane_current_path}'
+
 set-window-option -g window-status-current-bg blue
 
 set -g status-justify "centre"
