--- a/tilde/flavor/coc.settings
+++ b/tilde/flavor/coc.settings
@@ -3,7 +3,7 @@ set ft=vim
 " if hidden is not set, TextEdit might fail.
 set hidden
 
-" Some server have issues with backup files, see #649
+" Some servers have issues with backup files
 set nobackup
 set nowritebackup
 
@@ -50,7 +50,7 @@ nmap <silent> gr <Plug>(coc-references)
 nnoremap <silent> K :call <SID>show_documentation()<CR>
 
 function! s:show_documentation()
-  if &filetype == 'vim'
+  if (index(['vim','help'], &filetype) >= 0)
     execute 'h '.expand('<cword>')
   else
     call CocAction('doHover')
