--- a/tilde/.tmux.conf
+++ b/tilde/.tmux.conf
@@ -27,34 +27,41 @@ set -g status-right-attr "none"
 set -g status-right-length "100"
 setw -g window-status-attr "none"
 
-# COLOUR (base16)
+## COLORSCHEME: edited gruvbox dark
+
 # default statusbar colors
-set-option -g status-bg "#181818"
-set-option -g status-fg "#b8b8b8"
-set-option -g status-attr default
+set-option -g status-bg colour11
+set-option -g status-fg colour15
 
 # default window title colors
-set-window-option -g window-status-bg default
-set-window-option -g window-status-fg "#b8b8b8"
+set-window-option -g window-status-bg colour13
+set-window-option -g window-status-fg colour12
+
+set-window-option -g window-status-activity-bg colour11
+set-window-option -g window-status-activity-fg colour15
 
 # active window title colors
 set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-fg "#d8d8d8"
+set-window-option -g window-status-current-fg colour10
 
 # pane border
-set-option -g pane-border-fg "#282828"
-set-option -g pane-active-border-fg "#383838"
+set-option -g pane-active-border-fg colour250 #fg2
+set-option -g pane-border-fg colour237 #bg1
 
-# message text
-set-option -g message-bg "#282828"
-set-option -g message-fg "#d8d8d8"
+# message infos
+set-option -g message-bg colour239 #bg2
+set-option -g message-fg colour223 #fg1
+
+# writting commands inactive
+set-option -g message-command-bg colour239 #fg3
+set-option -g message-command-fg colour223 #bg1
 
 # pane number display
-set-option -g display-panes-active-colour "#a1b56c"
-set-option -g display-panes-colour "#f7ca88"
+set-option -g display-panes-active-colour colour250 #fg2
+set-option -g display-panes-colour colour237 #bg1
 
 # clock
-set-window-option -g clock-mode-colour "#a1b56c"
+set-window-option -g clock-mode-colour colour9
 
 # bell
-set-window-option -g window-status-bell-style fg="#282828",bg="#ab4642"
+set-window-option -g window-status-bell-style fg=colour235,bg=colour167 #bg, red
