--- a/tilde/flavor/plug.settings
+++ b/tilde/flavor/plug.settings
@@ -1,7 +1,7 @@
 set ft=vim
 
 " ale
-let g:ale_sign_error = '❌' 
+let g:ale_sign_error = '❌'
 let g:ale_sign_warning = '⚠️'
 let g:ale_completion_enabled = 1
 let g:ale_fix_on_save = 1
@@ -22,10 +22,10 @@ let g:ale_fixers = {
   \ 'javascript': [linter]
   \ }
 
-" goyo 
+" goyo
 au BufReadPost,BufNewFile *.md :Goyo 90%
 au BufReadPost,BufNewFile *.md,COMMIT_EDITMSG set wrap linebreak nolist spell spelllang=en_us complete+=kspell
-au BufReadPost,BufNewFile *.html set spell spelllang=en_us
+au BufReadPost,BufNewFile *.html,*.txt set spell spelllang=en_us
 
 " NERDTree settings
 let NERDTreeMinimalUI=1
