--- a/tilde/.tmux.conf
+++ b/tilde/.tmux.conf
@@ -1,5 +1,5 @@
 #Needed for colors to be showing up correctly in vim
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-termite"
 
 #Normal scrolling like you'd expect in your terminal
 set -g mouse on
@@ -30,38 +30,19 @@ setw -g window-status-attr "none"
 ## COLORSCHEME: edited gruvbox dark
 
 # default statusbar colors
-set-option -g status-bg colour11
+set-option -g status-bg colour239
 set-option -g status-fg colour15
 
 # default window title colors
-set-window-option -g window-status-bg colour13
-set-window-option -g window-status-fg colour12
+set-window-option -g window-status-bg colour238
+set-window-option -g window-status-fg colour15
 
-set-window-option -g window-status-activity-bg colour11
+set-window-option -g window-status-activity-bg colour2
 set-window-option -g window-status-activity-fg colour15
 
 # active window title colors
 set-window-option -g window-status-current-bg default
 set-window-option -g window-status-current-fg colour10
 
-# pane border
-set-option -g pane-active-border-fg colour250 #fg2
-set-option -g pane-border-fg colour237 #bg1
-
-# message infos
-set-option -g message-bg colour239 #bg2
-set-option -g message-fg colour223 #fg1
-
-# writting commands inactive
-set-option -g message-command-bg colour239 #fg3
-set-option -g message-command-fg colour223 #bg1
-
-# pane number display
-set-option -g display-panes-active-colour colour250 #fg2
-set-option -g display-panes-colour colour237 #bg1
-
 # clock
-set-window-option -g clock-mode-colour colour9
-
-# bell
-set-window-option -g window-status-bell-style fg=colour235,bg=colour167 #bg, red
+set-window-option -g clock-mode-colour colour2
