blend tmuxbar window colors

--- a/tilde/.tmux.conf
+++ b/tilde/.tmux.conf
@@ -1,17 +1,16 @@
-#Needed for colors to be showing up correctly in vim
 set -g default-terminal "xterm-termite"
 
-#Normal scrolling like you'd expect in your terminal
+# Normal scrolling like you'd expect in your terminal
 set -g mouse on
 
-#Specific bindings
+# Specific bindings
 unbind C-b
 set -g prefix C-a
 
 setw -g monitor-activity on
 set -g visual-activity on
 
-# Allos you to split into the same directory you were in when you split
+# Allows you to split into the same directory you were in when you split
 bind-key '%' split-window -h -c '#{pane_current_path}'
 bind-key '"' split-window -v -c '#{pane_current_path}'
 
@@ -27,14 +26,12 @@ set -g status-right-attr "none"
 set -g status-right-length "100"
 setw -g window-status-attr "none"
 
-## COLORSCHEME: edited gruvbox dark
-
 # default statusbar colors
 set-option -g status-bg colour239
 set-option -g status-fg colour15
 
 # default window title colors
-set-window-option -g window-status-bg colour238
+set-window-option -g window-status-bg colour239
 set-window-option -g window-status-fg colour15
 
 set-window-option -g window-status-activity-bg colour2
