--- a/tilde/.tmux.conf
+++ b/tilde/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "xterm-termite"
+set -g default-terminal "xterm-256color"
 
 # Normal scrolling like you'd expect in your terminal
 set -g mouse on
