add in i3 and some updates

--- a/tilde/flavor/plug.settings
+++ b/tilde/flavor/plug.settings
@@ -18,11 +18,11 @@ endif
 
 if (linter != "")
   let g:ale_linters = {
-    \ 'javascript': [linter]
+    \ 'javascript': [linter],
     \ }
   let g:ale_fixers = {
     \ '*': ['trim_whitespace'],
-    \ 'javascript': [linter]
+    \ 'javascript': [linter],
     \ }
 endif
 
