switch over to nord

--- a/tilde/.tmux.conf
+++ b/tilde/.tmux.conf
@@ -1,3 +1,4 @@
+source-file ~/.flavor/tmux.snapshot
 set -g default-terminal "xterm-256color"
 
 # Normal scrolling like you'd expect in your terminal
@@ -14,32 +15,3 @@ set -g visual-activity on
 bind-key '%' split-window -h -c '#{pane_current_path}'
 bind-key '"' split-window -v -c '#{pane_current_path}'
 
-set-window-option -g window-status-current-bg blue
-
-set -g status-justify "centre"
-set -g status "on"
-set -g status-attr "none"
-set -g status-left-length "100"
-set -g status-left-attr "none"
-set -g status-right " %d/%m - %H:%M "
-set -g status-right-attr "none"
-set -g status-right-length "100"
-setw -g window-status-attr "none"
-
-# default statusbar colors
-set-option -g status-bg colour239
-set-option -g status-fg colour15
-
-# default window title colors
-set-window-option -g window-status-bg colour239
-set-window-option -g window-status-fg colour15
-
-set-window-option -g window-status-activity-bg colour2
-set-window-option -g window-status-activity-fg colour15
-
-# active window title colors
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-fg colour10
-
-# clock
-set-window-option -g clock-mode-colour colour2
