--- a/tilde/config/i3/config
+++ b/tilde/config/i3/config
@@ -184,11 +184,12 @@ mode "$mode_display" {
 bindsym $mod+x mode "$mode_display"
 bindsym $mod+r mode "resize"
 
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-        tray_output primary
-        position top
-        font pango:SauceCodePro Nerd Font Mono 8
-}
+#bar {
+#        status_command i3status
+#        tray_output primary
+#        position top
+#        font pango:SauceCodePro Nerd Font Mono 8
+#}
