--- a/tilde/flavor/coc.settings
+++ b/tilde/flavor/coc.settings
@@ -91,6 +91,8 @@ command! -nargs=0 Format :call CocAction('format')
 " Use `:Fold` for fold current buffer
 command! -nargs=? Fold :call     CocAction('fold', <f-args>)
 
+let g:airline#extensions#coc#enabled = 1
+
 " Using CocList
 " Show all diagnostics
 nnoremap <silent> <space>a  :<C-u>CocList diagnostics<cr>
