update with recent settings

--- a/tilde/config/nvim/coc-settings.json
+++ b/tilde/config/nvim/coc-settings.json
@@ -6,5 +6,6 @@
       "filetypes": ["scala", "sbt"]
     }
   },
-  "suggest.enablePreview": true
+  "suggest.enablePreview": true,
+  "coc.preferences.hoverTarget": "float"
 }
