--- a/tilde/flavor/plug.settings
+++ b/tilde/flavor/plug.settings
@@ -5,23 +5,25 @@ let g:ale_sign_error = '✘'
 let g:ale_sign_warning = '⚠'
 
 if executable("./node_modules/.bin/standard")
-  let linter = "standard"
+	let linter = "standard"
 elseif executable("./node_modules/.bin/xo")
-  let linter = "xo"
-elseif filereadable(expand("./.eslintrc.js"))
-  let linter = "eslint"
+	let linter = "xo"
+elseif executable("./node_modules/.bin/prettier")
+	let linter = "prettier"
+elseif executable("./node_modules/.bin/eslint")
+	let linter = "eslint"
 else
-  let linter = ""
+	let linter = ""
 endif
 
 if (linter != "")
-  let g:ale_linters = {
-    \ 'javascript': [linter],
-    \ }
-  let g:ale_fixers = {
-    \ '*': ['trim_whitespace'],
-    \ 'javascript': [linter],
-    \ }
+	let g:ale_linters = {
+		\ 'javascript': [linter],
+		\ }
+	let g:ale_fixers = {
+			\ '*': ['trim_whitespace'],
+			\ 'javascript': [linter],
+			\ }
 endif
 
 " goyo
