--- a/tilde/flavor/coc.settings
+++ b/tilde/flavor/coc.settings
@@ -7,6 +7,8 @@ set hidden
 set nobackup
 set nowritebackup
 
+set cmdheight=2
+
 " Smaller updatetime for CursorHold & CursorHoldI
 set updatetime=300
 
