add in lightline and tmuxline, update tmux settings

--- a/tilde/.tmux.conf
+++ b/tilde/.tmux.conf
@@ -1,26 +1,8 @@
-#source-file ~/.flavor/tmux.snapshot
+# :TmuxlineSnapshot [file] to create a new snapshot file
+source-file ~/.flavor/tmux.snapshot
 set -g default-terminal "screen-256color"
 set -g escape-time 10
 
-fg="#CBCCC6"
-bg="#212732"
-status_bg="#34455A"
-border_fg="#70748C"
-border_active_fg="#FECB6E"
-status_left_bg="#FFA759"
-
-set -g status-style "bg=$status_bg,fg=$fg"
-# set -g status-left-style "bg=$status_left_bg,fg=$fg"
-
-# Border
-set -g pane-border-style "bg=$bg,fg=$border_fg"
-set -g pane-active-border-style "bg=$bg,fg=$border_active_fg"
-
-# Window
-set -g window-status-current-style "fg=$border_active_fg"
-set -g window-status-style "fg=$fg"
-
-# Normal scrolling like you'd expect in your terminal
 set -g mouse on
 
 # Specific bindings
