--- a/tilde/.tmux.conf
+++ b/tilde/.tmux.conf
@@ -16,3 +16,4 @@ set -g visual-activity on
 bind-key '%' split-window -h -c '#{pane_current_path}'
 bind-key '"' split-window -v -c '#{pane_current_path}'
 
+unbind -T copy-mode-vi MouseDragEnd1Pane
