--- a/tilde/config/nvim/coc-settings.json
+++ b/tilde/config/nvim/coc-settings.json
@@ -1,10 +1,5 @@
 {
   "languageserver": {
-    "metals": {
-      "command": "metals-vim",
-      "rootPatterns": ["build.sbt"],
-      "filetypes": ["scala", "sbt"]
-    },
     "elmLS": {
       "command": "elm-language-server",
       "filetypes": ["elm"],
@@ -12,8 +7,17 @@
       "initializationOptions": {
         "elmAnalyseTrigger": "change"
       }
-    }
+    },
+    // "metals": {
+    //   "command": "metals-vim",
+    //   "rootPatterns": ["build.sbt"],
+    //   "filetypes": ["scala", "sbt"]
+    // }
   },
   "codeLens.enable": true,
-  "coc.preferences.formatOnType": true
+  "coc.preferences.formatOnType": true,
+  // "diagnostic.virtualText": true,
+  "metals.serverProperties": [],
+  "metals.customRepositories": [],
+  "metals.serverVersion": "0.7.6"
 }
