--- a/tilde/flavor/coc.settings
+++ b/tilde/flavor/coc.settings
@@ -117,3 +117,5 @@ command! -nargs=0 MetalsDoctor :call CocRequestAsync('metals', 'workspace/execut
 command! -nargs=0 MetalsImport :call CocRequestAsync('metals', 'workspace/executeCommand', { 'command': 'build-import' })
 command! -nargs=0 MetalsConnect :call CocRequestAsync('metals', 'workspace/executeCommand', { 'command': 'build-connect' })
 
+inoremap <silent><expr> <cr> pumvisible() ? coc#_select_confirm()
+      \: "\<C-g>u\<CR>\<c-r>=coc#on_enter()\<CR>"
