add in new setup

--- a/tilde/.tmux.conf
+++ b/tilde/.tmux.conf
@@ -1,6 +1,6 @@
 # :TmuxlineSnapshot [file] to create a new snapshot file
 source-file ~/.flavor/tmux.snapshot
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 set -g escape-time 10
 
 set -g mouse on
