--- a/tilde/flavor/coc.settings
+++ b/tilde/flavor/coc.settings
@@ -24,7 +24,7 @@ inoremap <silent><expr> <TAB>
       \ coc#refresh()
 inoremap <expr><S-TAB> pumvisible() ? "\<C-p>" : "\<C-h>"
 
-"" used in the tab autocompletion for coc
+" used in the tab autocompletion for coc
 function! s:check_back_space() abort
   let col = col('.') - 1
   return !col || getline('.')[col - 1]  =~# '\s'
@@ -77,7 +77,7 @@ augroup mygroup
 augroup end
 
 " Remap for do codeAction of selected region, ex: `<leader>aap` for current paragraph
-vmap <leader>a  <Plug>(coc-codeaction-selected)
+xmap <leader>a  <Plug>(coc-codeaction-selected)
 nmap <leader>a  <Plug>(coc-codeaction-selected)
 
 " Remap for do codeAction of current line
@@ -91,9 +91,9 @@ command! -nargs=0 Format :call CocAction('format')
 " Use `:Fold` for fold current buffer
 command! -nargs=? Fold :call CocAction('fold', <f-args>)
 
-let g:airline#extensions#coc#enabled = 1
-let airline#extensions#coc#error_symbol = '✘'
-let airline#extensions#coc#warning_symbol = '⚠'
+ let airline#extensions#coc#error_symbol = '✘'
+ let airline#extensions#coc#warning_symbol = '⚠'
+
 " Using CocList
 " Show all diagnostics
 nnoremap <silent> <space>a  :<C-u>CocList diagnostics<cr>
