--- a/tilde/config/nvim/coc-settings.json
+++ b/tilde/config/nvim/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "codeLens.enable": true,
   "coc.preferences.formatOnType": true,
-  "metals.serverVersion": "0.7.6+530-f4aefd3d-SNAPSHOT"
+  "metals.serverVersion": "0.7.6+530-f4aefd3d-SNAPSHOT",
+  "metals.javaHome": "/Users/ckipp/.sdkman/candidates/java/current"
 }
