update alias and theme

--- a/tilde/flavor/plug.settings
+++ b/tilde/flavor/plug.settings
@@ -14,6 +14,6 @@ au BufRead,BufNewFile *.sbt set filetype=scala
 
 " airline
 " enables seeing buffers up on top
-let g:airline_theme='one'
+let g:airline_theme='onedark'
 let g:airline#extensions#tabline#enabled = 1
 let g:airline#extensions#tabline#fnamemod = ':t'
