--- a/tilde/flavor/coc.settings
+++ b/tilde/flavor/coc.settings
@@ -50,7 +50,8 @@ nmap <silent> gr <Plug>(coc-references)
 " Use K for show documentation in preview window
 nnoremap <silent> K :call <SID>show_documentation()<CR>
 
-nnoremap <leader>ws :call CocAction('runCommand', 'metals.expand-decoration')<CR>
+" Used to expand decorations in worksheets
+nmap <leader>ws <Plug>(coc-metals-expand-decoration)
 
 function! s:show_documentation()
   if (index(['vim','help'], &filetype) >= 0)
@@ -93,7 +94,6 @@ command! -nargs=0 Format :call CocAction('format')
 " Use `:Fold` for fold current buffer
 command! -nargs=? Fold :call CocAction('fold', <f-args>)
 
-" Using CocList
 " Show all diagnostics
 nnoremap <silent> <space>a  :<C-u>CocList diagnostics<cr>
 " Manage extensions
@@ -111,5 +111,7 @@ nnoremap <silent> <space>k  :<C-u>CocPrev<CR>
 " Resume latest coc list
 nnoremap <silent> <space>p  :<C-u>CocListResume<CR>
 
+" Notify coc.nvim that <enter> has been pressed.
+" Currently used for the formatOnType feature.
 inoremap <silent><expr> <cr> pumvisible() ? coc#_select_confirm()
       \: "\<C-g>u\<CR>\<c-r>=coc#on_enter()\<CR>"
